--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "dependencies": {
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql-request": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   }
 }
