--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
