--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "xss": "^1.0.14"
   }
 }
