--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "xss": "^1.0.14"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
