--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
